src/test/ui/resolve/token-error-correct-2.stderr
error: incorrect close delimiter: `)`
  --> $DIR/token-error-correct-2.rs:18:5
   |
18 |     ) //~ ERROR: incorrect close delimiter: `)`
   |     ^
   |
note: unclosed delimiter
  --> $DIR/token-error-correct-2.rs:14:12
   |
14 |     if foo {
   |            ^

error[E0425]: cannot find value `foo` in this scope
  --> $DIR/token-error-correct-2.rs:14:8
   |
14 |     if foo {
   |        ^^^ not found in this scope

error: aborting due to 2 previous errors

